--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -2,6 +2,6 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
+startCommand = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --proxy-headers"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
